--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,3 @@
-package com.thejenilgohel.ar_flutter_reloaded
+//package third_party.ar_flutter_plugin.android
 
 rootProject.name = 'ar_flutter_reloaded'
