updated gradle and agp

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,7 +30,7 @@ apply plugin: 'com.android.library'
 //apply plugin: 'kotlin-android'
 
 android {
-
+    namespace 'com.jenildgohel.ar_flutter_reloaded'
     compileSdkVersion 31
 
     compileOptions {
