--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,7 +27,7 @@ rootProject.allprojects {
 }
 
 apply plugin: 'com.android.library'
-//apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android'
 
 android {
     namespace 'com.jenildgohel.ar_flutter_reloaded'
@@ -48,7 +48,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "com.google.ar:core:1.47.0"
 
     implementation 'com.google.ar.sceneform:core:1.17.1'
