--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ar_flutter_reloaded
 description: Flutter Plugin for creating (collaborative) Augmented Reality experiences - Supports ARKit for iOS and ARCore for Android devices.
-version: 0.0.4
+version: 0.0.6
 repository: https://github.com/CariusLars/ar_flutter_plugin
 
 environment:
@@ -32,6 +32,6 @@ flutter:
     platforms:
       android:
         package: com.jenildgohel.ar_flutter_reloaded
-        pluginClass: ArFlutterPlugin
+        pluginClass: ArFlutterReloaded
       ios:
         pluginClass: ArFlutterPlugin
